--- a/netlify.toml
+++ b/netlify.toml
@@ -19,3 +19,9 @@
   #  publish = "dist" # Folder with the static content for _redirect file
 
   ## more info on configuring this file: https://docs.netlify.com/configure-builds/file-based-configuration/
+  [[redirects]]
+  from = "/api/*"
+  to = "https://matchoshop.up.railway.app/api/:splat"
+  status = 200
+  force = true
+  headers = {X-From = "Netlify"}
